src/collection/sqlcollection/SqlCollection.h
@@ -26,8 +26,6 @@
 #include "SqlStorage.h"
 #include "amarok_export.h"
 
-#include <QPointer>
-
 #include <KIcon>
 
 class SqlCollectionFactory : public Amarok::CollectionFactory
@@ -65,7 +63,7 @@ class SqlCollection : public Amarok::Collection, public SqlStorage
 
         SqlRegistry* registry() const;
         DatabaseUpdater* dbUpdater() const;
-        ScanManager* scanManager() const;
+        ScanManager* scanManager();
         
         void removeCollection();    //testing, remove later
 
@@ -123,7 +121,6 @@ class SqlCollection : public Amarok::Collection, public SqlStorage
     private:
         SqlRegistry* const m_registry;
         DatabaseUpdater * const m_updater;
-        QPointer<ScanManager> m_scanManager;
 
         QString m_collectionId;
         QString m_prettyName;
